--- a/DOM 2/13.EventListner/2.MouseEvents/index.html
+++ b/DOM 2/13.EventListner/2.MouseEvents/index.html
@@ -3,21 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Event Listner</title>
+    <title>Mouse events</title>
+</head>
 <style>
     .special{
         color: aqua;
-        background-color: black;
-        padding: 0%;
-        border: brown;
+        background-color: blue;
     }
 </style>
-</head>
 <body>
-    <h3 class="head"> wait for it</h3>
+    <h3>Mouse Events</h3>
     <button class="btn">click me</button>
-    <h3 onclick="classList.add('special')"> Direct </h3>
-    <script src="s.js"></script>
-    
+<h4 class="head">what is this </h4>
+
+<script src="s.js"></script>
 </body>
 </html>
