--- a/1.JSfundamentals/index.html
+++ b/1.JSfundamentals/index.html
@@ -12,9 +12,9 @@
 
     <!-- <script src="4.variable.js"></script> -->
 
-    <!-- <script src="6.numbers.js"></script> -->
+    <!-- <script src="7.ImplicitTypeConvertion.js"></script> -->
 
-    <!-- <script src="8.dataTypes.js"></script> -->
+    <script src="8.primitiveDataTypes.js"></script>
 
     <!-- <script src="9.non-primitiveDataTypes.js"></script> -->
 
@@ -26,7 +26,7 @@
 
     <!-- <script src="13.TernaryOperator.js"></script> -->
 
-    <script src="15.Loops.js"></script>
+    <!-- <script src="15.Loops.js"></script> -->
 
 </body>
 </html>
